# billy

./: README.md
bills-service/: .style.yapf  manage.py  pyproject.toml  pytest.ini
bills-service/bills_service/: asgi.py  settings.py  urls.py  wsgi.py
bills-service/bills_service/bills/: apps.py  models.py  serializers.py  views.py
bills-service/bills_service/bills/migrations/: 0001_initial.py
bills-service/bills_service/settings/: base.py
docs/diagrams/: architecture
