[tool.poetry]
name = "bills-service"
version = "0.1.0"
description = ""
authors = ["Alfredo Viera <alvie97m@gmail.com>"]
readme = "README.md"
packages = [{include = "bills_service"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
djangorestframework = "^3.14.0"
markdown = "^3.4.1"
django-filter = "^22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
