[tool.poetry]
name = "bills-service"
version = "0.1.0"
description = ""
authors = ["Alfredo Viera <alvie97m@gmail.com>"]
readme = "README.md"
packages = [{include = "bills_service"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
djangorestframework = "^3.14.0"
markdown = "^3.4.1"
django-filter = "^22.1"
python-dotenv = "^0.21.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
